glide (2002.04.10-13) UNRELEASED; urgency=low

  * Build all binary dependent packages under binary-arch. (Closes: #366062)
  * Debconf template translations:
    - Added Portuguese. (Closes: #362838)
      Thanks to André Costa <skit@argon.ath.cx>.

 -- Guillem Jover <guillem@debian.org>  Fri,  5 May 2006 04:33:05 +0300

glide (2002.04.10-12) unstable; urgency=low

  * Update FSF's address in debian/copyright.
  * Reindent 3dfx license in debian/copyright.
  * Debconf template translations:
    - Updated Danish by Claus Hindsgaul. (Closes: #321920)
    - Updated Vietnamese. (Closes: #322285)
      Thanks to Clytie Siddall <clytie@riverland.net.au>.
    - Updated Czech. (Closes: #322426)
      Thanks to Miroslav Kure <kurem@upcase.inf.upol.cz>.
    - Updated German. (Closes: #345847)
      Thanks to Erik Schanze <schanzi_usenet@gmx.de>.
  * Wrap lines in debian/control fields.
  * Use new X.org 7.0 paths for modules. (Closes: #362116)
  * Switched to debhelper compatibility level 5.
  * Change architectures for development packages from all to match their
    library packages.
  * Change Build-Depends from automake1.7 to automake1.9.

 -- Guillem Jover <guillem@debian.org>  Thu, 13 Apr 2006 13:14:03 +0300

glide (2002.04.10-11) unstable; urgency=low

  * Use -march only on i386, revert to -mcpu for alpha.
  * Change insane optimization level for i386 from -O6 to -O3.
  * Add new xorg-x11 Build-Depends on libxxf86dga-dev and libxxf86vm-dev.

 -- Guillem Jover <guillem@debian.org>  Sat,  6 Aug 2005 19:53:28 +0300

glide (2002.04.10-10) unstable; urgency=low

  * Debconf template translations:
    - Added Vietnamese. (Closes: #311796)
      Thanks to Clytie Siddall <clytie@riverland.net.au>.
    - Added Czech. (Closes: #310880)
      Thanks to Miroslav Kure <kurem@upcase.inf.upol.cz>.
  * Fix some typos in the templates. (Closes: #311797)
    Thanks to Clytie Siddall <clytie@riverland.net.au>.
  * Unfuzzy correct translations for Catalan, Spanish, French and